bits and pieces

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title><%= @title %></title>
     <%= csrf_meta_tag %>
     <%= render 'layouts/stylesheets' %>
   </head>
@@ -10,7 +10,7 @@
       <%= render 'layouts/header' %>
       <section class="round">
         <% flash.each do |key, value| %>
-          <div class="flash <%= key %>"><%= value %></div>
+          <%= content_tag(:div, value, :class => "flash #{key}") %></div>
         <% end %>
         <%= yield %>
       </section>
